# topix

./: .env.sample  .gitignore  Makefile  README.md  api.ipynb  package-lock.json  package.json  pyproject.toml  pytest.ini
backend/: Dockerfile  pyproject.toml  test_rate_limit.py
backend/eval/: eval_metrics.py  evaluate.py
backend/notebooks.exclude/: run_code.ipynb
backend/test/: conftest.py
backend/test/integration/: conftest.py
backend/test/integration/store/: __init__.py  test_graph_store.py  test_note_revision_store.py  test_user_store.py
backend/test/unit/agents/: test_base.py  test_tool_handler.py  test_widget_learn.py
backend/test/unit/datatypes/: __init__.py  test_chat_message.py  test_property.py  test_user.py
backend/test/unit/nlp/: test_chunking.py
backend/test/unit/store/: test_graph_store_note_snapshots.py  test_note_revision.py
backend/test/unit/utils/: __init__.py  test_graph_layout.py  test_graph_layout_bounds.py  test_retry.py
backend/topix/: __init__.py  llm_models.yml  services.yml  setup.py
backend/topix/agents/: base.py  config.py  deep_research.py  describe_chat.py  printer.py  run.py  sessions.py  tool_handler.py
backend/topix/agents/assistant/: answer_reformulate.py  code.py  code_interpreter.py  image_search.py  manager.py  manager_config.yaml  memory_search.py  plan.py  query_rewrite.py  web_search.py
backend/topix/agents/configs/: assistant.yml  deep_research.yml
backend/topix/agents/datatypes/: annotations.py  context.py  drawn_graph.py  image.py  inputs.py  model_enum.py  outputs.py  reasoning_step.py  stream.py  tool_call.py  tools.py  web_search.py
backend/topix/agents/document/: __init__.py  mindmap.py  summary.py  utils.py
backend/topix/agents/drawify/: drawify.py
backend/topix/agents/finance/: stock_agent.py  stock_review.py
backend/topix/agents/image/: describe.py  gen.py  illustrate.py  search.py
backend/topix/agents/memory/: __init__.py  search.py  utils.py
backend/topix/agents/mindmap/: build_graph_fr_text.py  datatypes.py  mapify.py  notify.py  utils.py
backend/topix/agents/newsfeed/: __init__.py  collector.py  config.py  config.yml  config_newsfeed.yml  context.py  datatypes.py  default_seed_sources.py  newsagent.py  pipeline.py  topic_setup.py  topic_tracker.py
backend/topix/agents/notes/: service.py  tools.py
backend/topix/agents/translate/: __init__.py  translate.py
backend/topix/agents/utils/: __init__.py  text.py  tools.py
backend/topix/agents/websearch/: deep.py  fetch.py  handler.py  navigate.py  openai.py  tools.py  utils.py  web_summarize.py
backend/topix/agents/widgets/: __init__.py  finance.py  image.py  learn.py  weather.py
backend/topix/api/: app.py  helpers.py
backend/topix/api/datatypes/: requests.py
backend/topix/api/router/: billing.py  boards.py  chats.py  documents.py  files.py  finance.py  subscriptions.py  tools.py  users.py  utils.py
backend/topix/api/utils/: auth_methods.py  common.py  decorators.py  email_verification.py  google_connect.py  rate_limit.py  rate_limiter.py  resilient_streaming.py  security.py  thumbnail.py
backend/topix/cli/: __init__.py  run.py  utils.py
backend/topix/config/: config.py  services.py  utils.py
backend/topix/datatypes/: email_verification.py  lang.py  mime.py  property.py  recurrence.py  resource.py  stage.py  user.py  user_billing.py
backend/topix/datatypes/chat/: chat.py  tool_call.py
backend/topix/datatypes/file/: __init__.py  chunk.py  document.py
backend/topix/datatypes/graph/: graph.py  style.py
backend/topix/datatypes/newsfeed/: __init__.py  newsfeed.py  subscription.py
backend/topix/datatypes/note/: link.py  note.py  style.py
backend/topix/nlp/: __init__.py  chunking.py  embed.py  parser.py  parsing.py
backend/topix/nlp/pipeline/: __init__.py  parsing.py  rag.py
backend/topix/prompts/: answer_reformulation.system.jinja  answer_reformulation.user.jinja  decoupled_web_search.jinja  deep_websearch.jinja  mapify.system.jinja  mapify2.system.jinja  memory_search.jinja  navigate.system.jinja  navigate.user.jinja  news.system.jinja  news.user.jinja  notify.system.jinja  notify.user.jinja  plan.system.jinja  plan.system_v2.jinja  plan.user.jinja  topic_illustrator.jinja
backend/topix/prompts/deep_research/: outline_generator.jinja  synthesis.system.jinja  synthesis.user.jinja  web_collector.jinja
backend/topix/prompts/document/: document_mindmap.system.jinja  document_mindmap.user.jinja  document_summary.system.jinja
backend/topix/prompts/drawify/: drawify.system.jinja  drawify.user.jinja
backend/topix/prompts/finance/: stockcollector.system.jinja  stockcollector.user.jinja  stockreview.system.jinja  (+1 more)
backend/topix/store/: chat.py  email_verification.py  graph.py  note_revision.py  subscription.py  user.py  user_billing.py
backend/topix/utils/: common.py  file.py  logging.py  retry.py  singleton.py  timeit.py  web.py
(+677 files in other folders)
