[project]
dynamic = ["version"]
name = "topix"
description = "Learn - Note - Share with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'pydantic[email]>=2.11.7',
    'qdrant-client>=1.14.3',
    'openai>=1.93.2',
    'mistralai>=1.9.1',
    'psycopg>=3.2.9',
    'psycopg-pool>=3.2.6',
    'aiohttp>=3.12.13'
]

[project.optional-dependencies]
dev = [
    'pytest>=8.4.1',
    'pytest-asyncio>=1.0.0',
    'flake8>=7.3.0',
    'ruff>=0.12.2',
    'black>=25.1.0',
    'datasets>=3.6.0',
    'openai-agents>=0.1.0'
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true


[tool.ruff]
lint.select = ["F", "E", "W", "C90", "C4"]