[project]
dynamic = ["version"]
name = "topix"
description = "Learn - Note - Share with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'pydantic[email]>=2.11.7',
    'qdrant-client>=1.14.3',
    'openai>=1.93.2',
    'openai-agents==0.2.1',
    'mistralai>=1.9.1',
    'psycopg>=3.2.9',
    'psycopg-pool>=3.2.6',
    'aiohttp>=3.12.13',
    'fastapi>=0.116.1',
    'rich>=14.0.0',
    'doppler-sdk>=1.3.0'
]

[project.optional-dependencies]
dev = [
    'pytest>=8.4.1',
    'pytest-asyncio>=1.0.0',
    'flake8>=7.3.0',
    'ruff>=0.12.2',
    'black>=25.1.0',
    'datasets>=3.6.0',
    'openai-agents>=0.1.0'
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true


[tool.ruff]
lint.select = [
  "I",     # isort
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "C90",   # mccabe
  "C4",    # flake8-comprehensions
  # "B",     # flake8-bugbear
  # "UP",    # pyupgrade
  # "SIM",   # flake8-simplify
  "ERA",   # eradicate
  # "D",     # pydocstyle
  "N"      # pep8-naming
]
line-length = 150

[tool.ruff.lint.isort]
known-first-party = ["topix"]
lines-between-types = 1