[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topix"
dynamic = ["version"]
description = "Learn - Note - Share with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "bcrypt>=4.3.0",
    "cloudscraper==1.2.71",
    "doppler-sdk>=1.3.0",
    "fastapi>=0.123.7",
    "google-auth>=2.40.3",
    "jinja2>=3.1.6",
    "linkpreview==0.11.0",
    "litellm>=1.74.9",
    "lxml==6.0.0",
    "mistralai>=1.9.1",
    "openai==2.8.0",
    "openai-agents==0.5.1",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.14.3",
    "questionary>=1.7.0",
    "readchar>=4.2.1",
    "rich>=13.7.1",
    "selectolax>=0.3.34",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "flake8>=7.3.0",
    "ruff>=0.12.2",
    "black>=25.1.0",
    "datasets>=3.6.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
lint.select = [
  "I",     # isort
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "C90",   # mccabe
  "C4",    # flake8-comprehensions
  # "B",     # flake8-bugbear
  # "UP",    # pyupgrade
  # "SIM",   # flake8-simplify
  "ERA",   # eradicate
  "D",     # pydocstyle
  "N"      # pep8-naming
]

lint.ignore = [
  "D203",  # Exclude 'incorrect-blank-line-before-class'
  "D213"   # Exclude 'multi-line-summary-second-line'
]
line-length = 150

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.setuptools.packages.find]
exclude = ["build", "test"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "datasets>=3.6.0",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]
